# MiroFish

./: DEPLOYMENT-READY.md  DEPLOYMENT-VERIFICATION.md  DEPLOYMENT.md  README-EN.md  deploy.sh  package.json  test-deployment.sh  vercel.json
backend/: pyproject.toml
backend/app/: __init__.py  auth.py
backend/app/api/: graph.py  report.py  simulation.py
backend/app/utils/: llm_client.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vercel.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/components/: SkeletonLoader.vue  Step4Report.vue  Step5Interaction.vue
frontend/src/views/: Home.vue  Process.vue
